[package]
name = "rustcheat"
version = "1.0.0"
edition = "2024"

[package]
license = "MIT"
keywords = ["rust", "cheatsheet", "cli", "reference", "learning"]
categories = ["command-line-utilities", "development-tools"]
publish = "crates.io"


[dependencies]
tokio = { version = "1", features = ["full"] }
open = "5.3.3"
