[package]
name = "rustcheat"
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["Xavier Womack", "gadgetguy49@gmail.com"]
keywords = ["rust", "cheatsheet", "cli", "reference", "learning"]
categories = ["command-line-utilities", "development-tools"]
description = "A fast and simple CLI cheat sheet for Rust, providing quick access to syntax, keywords, and common patterns."
publish = true
repository = "https://github.com/AmetuerCodr/rustcheat"


[dependencies]
tokio = { version = "1", features = ["full"] }
open = "5.3.3"
